attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-6-Building-CXX-object-CMakeFiles-ai-lang-1743582878477.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
[  6%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/MLInterpreter.cpp.o
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:55:6: error: no declaration matches ‘void ai_language::MLInterpreter::handleStartCommand()’
   55 | void MLInterpreter::handleStartCommand() {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:55:6: note: no functions named ‘void ai_language::MLInterpreter::handleStartCommand()’
In file included from /home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:2:
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/MLInterpreter.h:12:7: note: ‘class ai_language::MLInterpreter’ defined here
   12 | class MLInterpreter : public BaseInterpreter {
      |       ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:60:6: error: no declaration matches ‘void ai_language::MLInterpreter::handleCreateCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
   60 | void MLInterpreter::handleCreateCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:60:6: note: no functions named ‘void ai_language::MLInterpreter::handleCreateCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/MLInterpreter.h:12:7: note: ‘class ai_language::MLInterpreter’ defined here
   12 | class MLInterpreter : public BaseInterpreter {
      |       ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:82:6: error: no declaration matches ‘void ai_language::MLInterpreter::handleLoadCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
   82 | void MLInterpreter::handleLoadCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:82:6: note: no functions named ‘void ai_language::MLInterpreter::handleLoadCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/MLInterpreter.h:12:7: note: ‘class ai_language::MLInterpreter’ defined here
   12 | class MLInterpreter : public BaseInterpreter {
      |       ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:101:6: error: no declaration matches ‘void ai_language::MLInterpreter::handleSetCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
  101 | void MLInterpreter::handleSetCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:101:6: note: no functions named ‘void ai_language::MLInterpreter::handleSetCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/MLInterpreter.h:12:7: note: ‘class ai_language::MLInterpreter’ defined here
   12 | class MLInterpreter : public BaseInterpreter {
      |       ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:118:6: error: no declaration matches ‘void ai_language::MLInterpreter::handleTrainCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
  118 | void MLInterpreter::handleTrainCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:118:6: note: no functions named ‘void ai_language::MLInterpreter::handleTrainCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/MLInterpreter.h:12:7: note: ‘class ai_language::MLInterpreter’ defined here
   12 | class MLInterpreter : public BaseInterpreter {
      |       ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:132:6: error: no declaration matches ‘void ai_language::MLInterpreter::handleShowCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
  132 | void MLInterpreter::handleShowCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:132:6: note: no functions named ‘void ai_language::MLInterpreter::handleShowCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/MLInterpreter.h:12:7: note: ‘class ai_language::MLInterpreter’ defined here
   12 | class MLInterpreter : public BaseInterpreter {
      |       ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:158:6: error: no declaration matches ‘void ai_language::MLInterpreter::handleSaveCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
  158 | void MLInterpreter::handleSaveCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:158:6: note: no functions named ‘void ai_language::MLInterpreter::handleSaveCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/MLInterpreter.h:12:7: note: ‘class ai_language::MLInterpreter’ defined here
   12 | class MLInterpreter : public BaseInterpreter {
      |       ^~~~~~~~~~~~~
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:90: CMakeFiles/ai_language_lib.dir/src/interpreters/MLInterpreter.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:88: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2